# enterprise-test-automation-framework

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  lint.yml
config/: settings.yaml
config/environments/: dev.yaml  prod.yaml  staging.yaml
docs/: ARCHITECTURE.md
scripts/: run_tests.py
src/config/: settings.py
src/data/factories/: base_factory.py  user_factory.py
src/flows/: auth_flow.py
src/pages/: auth_page.py  base_page.py  dashboard_page.py
src/pages/locators/: auth_locators.py  dashboard_locators.py
src/utils/: retry.py
tests/: conftest.py
tests/e2e/: test_auth.py  test_dashboard.py
tests/smoke/: test_health.py
tests/unit/: test_settings.py
